# rep

./: .goreleaser.yaml  Cargo.toml  Makefile  NOTICE  README.md
.github/: dependabot.yml
.github/workflows/: lint.yaml  release.yaml  test.yaml  zizmor.yaml
assets/: help.tape
scripts/: bench.sh
src/: benches.rs  config.rs  diff.rs  expressions.rs  interactive.rs  main.rs  scan.rs  test_env.rs  theme.rs  ui.rs
src/fastmod/: mod.rs  terminal.rs
src/interactive/: terminal.rs
tests/: cli.rs
