[package]
name = "rep"
version = "0.1.4"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29"
diff = "0.1.11"
grep = "0.4"
ignore = "0.4.1"
Inflector = "0.11"
memchr = "2"
natord = "1.0"
num-format = { version = "0.4", features = ["with-system-locale"] }
regex = "1.5"
shlex = "1.3"
tempfile = "3.8.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
elidable_lifetime_names = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
format_collect = "warn"
format_push_string = "warn"
implicit_clone = "warn"
manual_let_else = "warn"
needless_for_each = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
ref_option = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
todo = "warn"
uninlined_format_args = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_trait_names = "warn"
use_self = "warn"
useless_conversion = "warn"
while_let_loop = "warn"

[lints.rust]
let_underscore_drop = "warn"
redundant_imports = "warn"
