[package]
name = "rep"
version = "0.4.5"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29"
convert_case = "0.10"
diff = "0"
diffy = "0"
gethostname = "1"
grep = "0"
ignore = "0"
memchr = "2"
natord = "1"
num-format = { version = "0", features = ["with-system-locale"] }
regex = "1"
shlex = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[lints.clippy]
assigning_clones = "warn"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
borrow_as_ptr = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
elidable_lifetime_names = "warn"
empty_drop = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
format_collect = "warn"
format_push_string = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
items_after_statements = "warn"
large_stack_arrays = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_unwrap_or = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_const_for_fn = "warn"
missing_panics_doc = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
negative_feature_names = "warn"
pathbuf_init_then_push = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
ref_option = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
return_and_then = "warn"
same_name_method = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trivially_copy_pass_by_ref = "warn"
tuple_array_conversions = "warn"
uninlined_format_args = "warn"
unnecessary_literal_bound = "warn"
unnecessary_safety_comment = "warn"
unnecessary_semicolon = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_self = "warn"
unused_trait_names = "warn"
use_self = "warn"
useless_conversion = "warn"
wildcard_dependencies = "warn"
while_let_loop = "warn"

[lints.rust]
let_underscore_drop = "warn"
redundant_imports = "warn"
